feat: add custom schedule rpc for external apps
